order form fixed withou responsive

--- a/Order-form.html
+++ b/Order-form.html
@@ -2,63 +2,61 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Order form</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/main.css">
+        <title> order form </title>
+        <link rel="stylesheet" href="./artifacts/main.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
-        <div id="popup-container">
-            <div id="popup-container__login login">
-                <button class="x">x</button>
+    <body class="body">
+        <div class="popup popup--zoom-popup">
+            <div id="login" class="login-form popup__login-form popup__login-form--show-popup">
+                <a class="popup__x popup__x--responsive-element" href="">x</a>
                 Please Sign In
                 <form>
-                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
-                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
-                    <input type="checkbox" name="Remember me">
+                    <input type="email" class="popup__form-element popup__form-element--responsive-element" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" class="popup__form-element popup__form-element--responsive-element" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <input type="checkbox" class="popup__form-element popup__form-element--responsive-element" name="Remember me">
                     Remember me
-                    <button>Sign In</button>
+                    <button type="submit" class="popup__form-element popup__form-element--responsive-element">Sign In</button>
                 </form>
-                <a href="#register">Register</a>
+                <a href="#register" class="popup__link--responsive-element">Register</a>
             </div>
-            <div id="register">
-                <button class="x">x</button>
+            <div id="register" class="registration-form popup__registration-form popup__registration-form--show-popup">
+                <a class="popup__x popup__x--responsive-element" href="">x</a>
                 <form>
-                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
-                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
-                    <button>Registration</button>
+                    <input type="email" class="popup__form-element popup__form-element--responsive-element" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" class="popup__form-element popup__form-element--responsive-element" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <button type="submit" class="popup__form-element popup__form-element--responsive-element">Registration</button>
                 </form>
-                <a href="#login">Sign In</a>
+                <a href="#login" class="popup__link--responsive-element">Sign In</a>
             </div>
-        </div>
-        <header class="header">
-            <div class="logo">
-                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
-            </div>
-            <div class='header-buttons'>
-                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <a href="#login"><button class="header-elements__Element" name="card">
+        </div>  
+        <header class="header body__header">
+            <a href="categories-grid.html">
+                <div class="header__logo logo"> </div>
+            </a>
+            <div class="header__header-elements">
+                <input class="header__search search header__search--responsive-element" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                <a class="header__icons icons header__icons--responsive-element" name="card" href='cart.html'>
                     <i class="fas fa-shopping-cart"></i>
-                </button></a>
-                <a href="#register"><button class="header-elements__Element" name="profile">
+                </a>
+                <a class="header__icons icons header__icons--responsive-element" name="profile" href="#login">
                     <i class="fas fa-user-circle"></i>
-                </button></a>
+                </a>
             </div>
         </header>
         <main class="main">
-            <div class="order-form">
-                <form>
-                    <div>                    
-                        <div class="order-creditcard__back-side">
-                            <input class="order-form__form" type="number"name="" placeholder="CCV" pattern=".{3,}" >
-                        </div>
-                        <div class="order-creditcard__front-side">
-                            <input class="order-form__form" type="number"name="numberOfCard" placeholder="0000000000000000" pattern=".{16,}" >
-                            <input class="order-form__form" type="month"name="monthAndYearOfCard" placeholder="mm" pattern=".{2,}" >
-                            <input class="order-form__form" type="text" name="NameOfHolder" placeholder="Name Surname" pattern=".{1,}" >
-                        </div>
-                        <button class="order-form__form order-form__button" type="submit">Finish</button>
-                    </div>  
+            <div class="creditcard">    
+                <form>                
+                    <div class="back-side">
+                        <input class="order-form__form" type="number"name="" placeholder="CCV" pattern=".{3,}" >
+                    </div>
+                    <div class="front-side">
+                        <input class="order-form__form" type="number"name="numberOfCard" placeholder="0000000000000000" pattern=".{16,}" >
+                        <input class="order-form__form" type="month"name="monthAndYearOfCard" placeholder="mm" pattern=".{2,}" >
+                        <input class="order-form__form" type="text" name="NameOfHolder" placeholder="Name Surname" pattern=".{1,}" >
+                    </div>
+                    <button class="creditcard__credit-card-submit" type="submit">Finish</button>
                 </form>
             </div>
         </main>
