--- a/Cart.html
+++ b/Cart.html
@@ -47,97 +47,79 @@
         </header>
 
         <div class="content">
-            <aside class="aside">
+            <aside>
                 Bsaket Summary
                 (<span id="QuantityOfGoodsInTheCart">2 items</span>)
                 <p class="totalCostInCartOfGoods"><b>$768</b></p>
                 <button>Proceed to CheckOut</button>
             </aside>
-            <main class="main content__main">
-                <div class="content__goods-in-cart goods-in-cart">
+            <main class="main">
                     <div class="good">
                         <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <span class="name-of-good">Nexus 7</span>
-                        
-                        <div>
-                            Quantity
-                            <input class="good__quantity" type="number" name="quantity" value="1">
-                        </div>
-                        <div>
-                            <span class="priceOfGood">$777</span>
-                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
-                        </div>
+                        <span class="">Nexus 7</span>
+                        Quantity
+                        <input class="good__quantity" type="number" name="quantity" value="1">
+                        <span class="priceOfGood">$777</span>
+                        <span><a class="good__link-remove-good-in-card">Remove</a></span>
                     </div>
                     <div class="good">
                         <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <span class="name-of-good">Nexus 7</span>
+                        <span class="">Nexus 7</span>
                         Quantity
                         <div>
                             <input class="good__quantity" type="number" name="quantity" value="1">
                         </div>
                         <div>
                             <span class="priceOfGood">$777</span>
-                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                            <span><a class="good__link-remove-good-in-card">Remove</a></span>
                         </div>
                     </div>
                     <div class="good">
                         <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <span class="name-of-good">Nexus 7</span>
+                        <span class="">Nexus 7</span>
                         Quantity
                         <div>
                             <input class="good__quantity" type="number" name="quantity" value="1">
                         </div>
                         <div>
                             <span class="priceOfGood">$777</span>
-                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                            <span><a class="good__link-remove-good-in-card">Remove</a></span>
                         </div>
                     </div>
                     <div class="good">
                         <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <span class="name-of-good">Nexus 7</span>
+                        <span class="">Nexus 7</span>
                         Quantity
                         <div>
                             <input class="good__quantity" type="number" name="quantity" value="1">
                         </div>
                         <div>
                             <span class="priceOfGood">$777</span>
-                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                            <span><a class="good__link-remove-good-in-card">Remove</a></span>
                         </div>
                     </div>
                     <div class="good">
                         <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <span class="name-of-good">Nexus 7</span>
+                        <span class="">Nexus 7</span>
                         Quantity
                         <div>
                             <input class="good__quantity" type="number" name="quantity" value="1">
                         </div>
                         <div>
                             <span class="priceOfGood">$777</span>
-                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                            <span><a class="good__link-remove-good-in-card">Remove</a></span>
                         </div>
                     </div>
                     <div class="good">
                         <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <span class="name-of-good">Nexus 7</span>
+                        <span class="">Nexus 7</span>
                         Quantity
                         <div>
                             <input class="good__quantity" type="number" name="quantity" value="1">
                         </div>
                         <div>
                             <span class="priceOfGood">$777</span>
-                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
-                        </div>
-                    </div>
-                    <div class="good">
-                        <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <span class="name-of-good">Nexus 7</span>
-                        Quantity
-                        <div>
-                            <input class="good__quantity" type="number" name="quantity" value="1">
-                        </div>
-                        <div>
-                            <span class="priceOfGood">$777</span>
-                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                            <span><a class="good__link-remove-good-in-card">Remove</a></span>
                         </div>
                     </div>
                 </div>
