--- a/Items-grid.html
+++ b/Items-grid.html
@@ -48,73 +48,73 @@
         <div class="change-view"><a class="icons header__icons--responsive-element" href="Items-list.html">List View</a></div>
         <div class="content">
             <nav class="widget">
-                <h3 class="widget-title">Категории</h3>
-                <ul class="widget-list">
-                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                <h3 class="widget__title">Категории</h3>
+                <ul class="widget__list">
+                    <li><a class="widget__link widget__link--behover"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="widget__link widget__link--behover"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="widget__link widget__link--behover"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="widget__link widget__link--behover"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="widget__link widget__link--behover"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
                 </ul>
             </nav>
         <main class="main">    
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
-            <div class="good-in-grid">
-                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+            <div class="category category--good-size">
+                <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
                 <h3><a class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
