--- a/categories-grid.html
+++ b/categories-grid.html
@@ -46,35 +46,33 @@
             </div>
         </header>
         <main class="main">
-            <div class="categories-grid">
-                <div class="categories-grid__category category">
-                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_0.jpg">
-                    <span><a href="Items-grid.html">Shoes</a> (45)</span>
-                </div>
-                <div class="categories-grid__category category">
-                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_01.jpg">
-                    <span><a href="Items-grid.html">Shoes</a> (45)</span>
-                </div>
-                <div class="categories-grid__category category">
-                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_1.jpg">
-                    <span><a href="Items-grid.html">Shoes</a> (45)</span>
-                </div>
-                <div class="categories-grid__category category">
-                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_12.jpg">
-                    <span><a href="Items-grid.html">Shoes</a> (45)</span>
-                </div>
-                <div class="categories-grid__category category">
-                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_8018582e5b743eec172a260d99602c0f_0.jpg">
-                    <span><a href="Items-grid.html">Shoes</a> (45)</span>
-                </div>
-                <div class="categories-grid__category category">
-                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_0.jpg">
-                    <span><a href="Items-grid.html">Shoes</a> (45)</span>
-                </div>
-                <div class="categories-grid__category category">
-                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_1.jpg">
-                    <span><a href="Items-grid.html">Shoes</a> (45)</span>
-                </div>
+            <div class="category category--category-size">
+                <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_0.jpg">
+                <span><a href="Items-grid.html">Shoes</a> (45)</span>
+            </div>
+            <div class="category category--category-size">
+                <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_01.jpg">
+                <span><a href="Items-grid.html">Shoes</a> (45)</span>
+            </div>
+            <div class="category category--category-size">
+                <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_1.jpg">
+                <span><a href="Items-grid.html">Shoes</a> (45)</span>
+            </div>
+            <div class="category category--category-size">
+                <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_12.jpg">
+                <span><a href="Items-grid.html">Shoes</a> (45)</span>
+            </div>
+            <div class="category category--category-size">
+                <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_8018582e5b743eec172a260d99602c0f_0.jpg">
+                <span><a href="Items-grid.html">Shoes</a> (45)</span>
+            </div>
+            <div class="category category--category-size">
+                <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_0.jpg">
+                <span><a href="Items-grid.html">Shoes</a> (45)</span>
+            </div>
+            <div class="category category--category-size">
+                <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_1.jpg">
+                <span><a href="Items-grid.html">Shoes</a> (45)</span>
             </div>
         </main>
         <footer class="footer"><p>©</p></footer>
