--- a/Items-list.html
+++ b/Items-list.html
@@ -2,64 +2,64 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>items list</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/items-list.css">
+        <title> items grid </title>
+        <link rel="stylesheet" href="./artifacts/main.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
-        <div id="popup-container">
-            <div id="login">
-                <button class="x">x</button>
+    <body class="body">
+        <div class="popup popup--zoom-popup">
+            <div id="login" class="login-form popup__login-form popup__login-form--show-popup">
+                <a class="popup__x popup__x--responsive-element" href="">x</a>
                 Please Sign In
                 <form>
-                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
-                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
-                    <input type="checkbox" name="Remember me">
+                    <input type="email" class="popup__form-element popup__form-element--responsive-element" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" class="popup__form-element popup__form-element--responsive-element" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <input type="checkbox" class="popup__form-element popup__form-element--responsive-element" name="Remember me">
                     Remember me
-                    <button>Sign In</button>
+                    <button type="submit" class="popup__form-element popup__form-element--responsive-element">Sign In</button>
                 </form>
-                <a href="#register">Register</a>
+                <a href="#register" class="popup__link--responsive-element">Register</a>
             </div>
-            <div id="register">
-                <button class="x">x</button>
+            <div id="register" class="registration-form popup__registration-form popup__registration-form--show-popup">
+                <a class="popup__x popup__x--responsive-element" href="">x</a>
                 <form>
-                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
-                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
-                    <button>Registration</button>
+                    <input type="email" class="popup__form-element popup__form-element--responsive-element" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" class="popup__form-element popup__form-element--responsive-element" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <button type="submit" class="popup__form-element popup__form-element--responsive-element">Registration</button>
                 </form>
-                <a href="#login">Sign In</a>
+                <a href="#login" class="popup__link--responsive-element">Sign In</a>
             </div>
         </div>  
-        <header class="header">
-            <div class="logo">
-                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
-            </div>
-            <div class='header-buttons'>
-                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <a href="#login"><button class="header-elements__Element" name="card">
+        <header class="header body__header">
+            <a href="categories-grid.html">
+                <div class="header__logo logo"> </div>
+            </a>
+            <div class="header__header-elements">
+                <input class="header__search search header__search--responsive-element" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                <a class="header__icons icons header__icons--responsive-element" name="card" href='cart.html'>
                     <i class="fas fa-shopping-cart"></i>
-                </button></a>
-                <a href="#register"><button class="header-elements__Element" name="profile">
+                </a>
+                <a class="header__icons icons header__icons--responsive-element" name="profile" href="#login">
                     <i class="fas fa-user-circle"></i>
-                </button></a>
+                </a>
             </div>
         </header>
-        <div class="live-veiw"><a>Grid View</a></div>
-        <div id="content">
+        <div class="change-view"><a class="icons header__icons--responsive-element" href="Items-grid.html">Grid View</a></div>
+        <div class="content">
             <nav class="widget">
-                <h3 class="widget-title">Категории</h3>
-                <ul class="widget-list">
-                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                <h3 class="widget__title">Категории</h3>
+                <ul class="widget__list">
+                    <li><a class="widget__link widget__link--behover"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="widget__link widget__link--behover"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="widget__link widget__link--behover"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="widget__link widget__link--behover"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="widget__link widget__link--behover"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
                 </ul>
             </nav>
             <main class="main">
-                <div class="good-in-list">
-                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                <div class="good good--in-list">
+                    <img alt="photo of good in list" class="good__logo" src="./pics/cart/googlenexus6p-1024x768.jpg">
                     <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
@@ -67,8 +67,8 @@
                         <button>Add to card</button>
                     </div>
                 </div>
-                <div class="good-in-list">
-                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                <div class="good good--in-list">
+                    <img alt="photo of good in list" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
                     <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
@@ -76,8 +76,8 @@
                         <button>Add to card</button>
                     </div>
                 </div>
-                <div class="good-in-list">
-                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                <div class="good good--in-list">
+                    <img alt="photo of good in list" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
                     <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
@@ -85,8 +85,8 @@
                         <button>Add to card</button>
                     </div>
                 </div>
-                <div class="good-in-list">
-                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                <div class="good good--in-list">
+                    <img alt="photo of good in list" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
                     <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
@@ -94,8 +94,8 @@
                         <button>Add to card</button>
                     </div>
                 </div>
-                <div class="good-in-list">
-                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                <div class="good good--in-list">
+                    <img alt="photo of good in list" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
                     <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
@@ -103,8 +103,8 @@
                         <button>Add to card</button>
                     </div>
                 </div>
-                <div class="good-in-list">
-                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                <div class="good good--in-list">
+                    <img alt="photo of good in list" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
                     <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
